--- a/app/index.html
+++ b/app/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-
 	<meta charset="utf-8">
-
-	<title>OptimizedHTML 5</title>
+	<title>starter</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
-
 	<meta name="viewport" content="width=device-width">
-
 	<link rel="icon" href="img/favicon.png">
 	<meta property="og:image" content="img/@1x/preview.jpg">
 	
 	<link rel="stylesheet" href="css/styles.min.css">
-
 </head>
-
 <body>
 
 	<!-- Custom HTML / Remove before use -->
@@ -34,10 +27,7 @@
 		<h2>Welcome to startup HTML template OptimizedHTML 5!</h2>
 		<p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipisicing elit. <em>Ad distinctio animi</em>, dolorum eaque praesentium unde aliquid, mollitia itaque voluptate quos modi et incidunt tempora fugiat voluptatum quia esse dolor repellat.</p>
 		<br>
-		<div class="example-grid">
-			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quo vero molestias, esse doloribus corrupti, nemo minus ullam tempore tenetur magni aut quos soluta sit adipisci eius expedita amet non.</div>
-			<div>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</div>
-		</div>
+		
 
 	</div>
 
