add webp template

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
 
 <body>
 
-	
+	<picture>
+    <source type="image/webp" srcset="img/preview.webp">
+    <source type="image/jpeg" srcset="img/preview.jpg">
+    <img src="img/preview.jpg" alt="preview">
+  </picture>
 
 	<script src="js/scripts.min.js"></script>
 
