--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,23 @@
 
 <body>
 
-	<picture>
-    <source type="image/webp" srcset="img/preview.webp">
-    <source type="image/jpeg" srcset="img/preview.jpg">
-    <img src="img/preview.jpg" alt="preview">
-  </picture>
+	<div class="slider">
+		<picture>
+			<source type="image/webp" srcset="img/preview.webp">
+			<source type="image/jpeg" srcset="img/preview.jpg">
+			<img src="img/preview.jpg" alt="preview">
+		</picture>
+		<picture>
+			<source type="image/webp" srcset="img/preview.webp">
+			<source type="image/jpeg" srcset="img/preview.jpg">
+			<img src="img/preview.jpg" alt="preview">
+		</picture>
+		<picture>
+			<source type="image/webp" srcset="img/preview.webp">
+			<source type="image/jpeg" srcset="img/preview.jpg">
+			<img src="img/preview.jpg" alt="preview">
+		</picture>
+	</div>
 
 	<script src="js/scripts.min.js"></script>
 
