--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<title>starter</title>
 	<meta name="description" content="Starter HTML template">
 	<meta name="viewport" content="width=device-width">
-	<link rel="icon" href="img/favicon.png">
+	<link rel="icon" href="static/favicon.png">
 	<meta property="og:image" content="img/preview.jpg">
 
 	<link rel="stylesheet" href="css/styles.min.css">
