--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>starter</title>
+	<title>three.js</title>
 	<meta name="description" content="Starter HTML template">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="static/favicon.png">
@@ -13,8 +13,6 @@
 </head>
 
 <body>
-
-	<!-- <canvas id="canvas"></canvas> -->
 
 	<script src="js/scripts.min.js"></script>
 
