--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>three.js</title>
-	<meta name="description" content="Starter HTML template">
+	<meta name="description" content="three-js test">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="static/favicon.png">
-	<meta property="og:image" content="img/preview.jpg">
+	<meta property="og:image" content="img/Back.jpg">
 
 	<link rel="stylesheet" href="css/styles.min.css">
 </head>
