--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,14 @@
 
 <body>
 
+	<div class="wrap">
+		<img src="img/V.svg" alt="v" class="wrap-v">
+		<img src="img/Z.svg" alt="z" class="wrap-z">
+		<img src="img/D.svg" alt="d" class="wrap-d">
+		<img src="img/H.svg" alt="h" class="wrap-h">
+		<img src="img/Text.svg" alt="text" class="wrap-text">
+	</div>
+
 	<script src="js/scripts.min.js"></script>
 
 </body>
